--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
             <section class="header-menu">
                 <h2 hidden>페이지 상단 메뉴</h2>
                 <img  src="./img/logo.svg" alt="로고 svg 이미지">
-                <div>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Support</a>
+                <div class="nav">
+                    <nav>
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Support</a>
+                    </nav>
                     <button class="download-btn1" type="button">Download</button>
                 </div>
             </section>
