--- a/index.html
+++ b/index.html
@@ -41,42 +41,44 @@
             </section>
         </header>
 
-        <main>
-            <section>
-                <img src="./img/img_4.jpg" alt="누워있는 고양이">
-                <p>
-                    Lorem Ipsum is simply
-                    dummy text of the printing
-                    and dummy text
-                </p>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting 
-                    industry.
-                </p>
+        <main class="main">
+            <section class="maintext">
+                <img class="sleep-cat" src="./img/img_4.jpg" alt="누워있는 고양이">
+                <div>
+                    <p class="main-text1">
+                        Lorem Ipsum is simply
+                        dummy text of the printing
+                        and dummy text
+                    </p>
+                    <p class="main-text2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting 
+                        industry.
+                    </p>
+                </div>
             </section>
 
-            <section>
-                <p>dummy text os the printing and dummy</p>
-                <p>
+            <section class="subtext">
+                <p class="sub-text1">dummy text os the printing and dummy</p>
+                <p class="sub-text2">
                     Lorem Ipsum is simply <span>dummy text</span>
                     of the printing and typesetting industry.<br>
                     Lorem Ipsum has been the industry's standard 
                     dummy text ever since the 1500s, when an unknown
                 </p>
-                <div>
+                <div class="three-cat">
                     <img src="./img/img_1.jpg" alt="">
                     <img src="./img/img_2.jpg" alt="">
                     <img src="./img/img_3.jpg" alt="">
                 </div>
             </section>
 
-            <section>
+            <section class="more">
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown<br>
                     Ipsum is simply dummy text of the printing and typesetting industry.
                 </p>
-                <button type="button">Learn more</button>
+                <button class="more-btn" type="button">Learn more</button>
             </section>
 
             <section>
