--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class="header-banner">
                 <h2 hidden>페이지 상단 베너</h2>
                 <div class="bannertext">
-                    <p class="banner-text1">Lorem Ipsum is simply<br>dummy text of the printing and</p>
+                    <p class="banner-text1">Lorem Ipsum is simply<br>dummy text of the printing</p>
                     <p class="banner-text2">
                         Lorem Ipsum is simply dummy text of the printing and<br>
                         typesetting industry.<br>
